--- a/apps/llm/Dockerfile
+++ b/apps/llm/Dockerfile
@@ -29,10 +29,10 @@ RUN cmake -B build -DBITNET_X86_TL2=ON -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMP
     cmake --build build --target llama-cli --config Release
 
 # Download the Llama model from HuggingFace
-ADD https://huggingface.co/brunopio/Llama3-8B-1.58-100B-tokens-GGUF/resolve/main/Llama3-8B-1.58-100B-tokens-TQ2_0.gguf .
+ADD https://huggingface.co/bartowski/Meta-Llama-3.1-8B-Instruct-GGUF/resolve/main/Meta-Llama-3.1-8B-Instruct-Q6_K_L.gguf .
 
 # Verify the integrity of the model file
-RUN echo "2565559c82a1d03ecd1101f536c5e99418d07e55a88bd5e391ed734f6b3989ac Llama3-8B-1.58-100B-tokens-TQ2_0.gguf" | sha256sum -c
+RUN echo "9bf5598b3cc6c5804c520aa6349266d2e2c9a22402e157bd9b187dc34806dad6 Meta-Llama-3.1-8B-Instruct-GGUF/resolve/main/Meta-Llama-3.1-8B-Instruct-Q6_K_L.gguf" | sha256sum -c
 
 # Expose port for communication with the Node.js app
 EXPOSE 5000
@@ -41,4 +41,4 @@ EXPOSE 5000
 COPY run_model.py .
 
 # Run the model in inference mode, listening for queries
-CMD ["python3", "run_model.py", "-m", "Llama3-8B-1.58-100B-tokens-TQ2_0.gguf"]
+CMD ["python3", "run_model.py", "-m", "Meta-Llama-3.1-8B-Instruct-GGUF/resolve/main/Meta-Llama-3.1-8B-Instruct-Q6_K_L.gguf"]
